# ite-flasher

./: CMakeLists.txt  Makefile  README.md  requirement.sh
include/: ite_flasher.h  logging.h  parameters.h  updater.hpp  util.h
src/: i2c_updater.cpp  ite_flasher.c  main.c  main.cpp  spi_updater.cpp  util.c
